# whisper_summarizer

./: .env.prod  .env.runner  .env.sample  .gitignore  .pre-commit-config.yaml  =1.13  CLAUDE.md  FRONTEND_TEST_FIXES.md  MIGRATION_ANALYSIS.md  PRODUCTION_README.md  QUICKSTART_PRD.md  README.md  RUNNER_SETUP.md  SCRIPTS.md  TODO.md  backup.sh  build_fastwhisper_base.sh  build_whisper.sh  check_backup.sh  clear_cache.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.runner.prod.yml  docker-compose.runner.yml  docker-compose.yml  gemini_spec.md  logs_prd.sh  performance_210min.md  pptx.md  pptx_marp.md  pptx_output.pptx  prd_server_info.example  pull.sh  push.sh  report.md  restore.sh  run_dev.sh  run_prd.sh  run_test.sh  spec.md  (+12 more)
backend.backup.20250108/: Makefile  pyproject.toml  test_raw_http_stream.py  test_streaming_real.py
backend.backup.20250108/app/: __init__.py  main.py
backend.backup.20250108/app/api/: shared.py
backend.backup.20250108/app/core/: config.py
backend.backup.20250108/app/db/: base_class.py
backend.backup.20250108/app/models/: transcription.py
backend.backup.20250108/app/schemas/: admin.py  chat.py  schemas.py  share.py  summary.py  transcription.py
backend.backup.20250108/app/services/: notebooklm_service.py  transcription_processor.py
backend.backup.20250108/migrations/: 001_add_user_activation.sql  add_original_text_compressed.sql  create_chat_messages_table.sql  create_share_links_table.sql
backend.backup.20250108/test-results/: t_260103_1753.md  t_260103_1756.md  t_260103_1827.md  t_260103_1829.md  t_260103_1916.md  t_260103_1920.md  t_260104_0307.md  t_260104_0310.md  t_260104_0313.md  t_260104_0323.md  t_260104_0337.md  t_260104_0341.md  t_260104_0345.md  t_260104_0346.md  t_260104_0347.md  t_260104_0403.md  t_260104_0405.md  t_260104_0425.md  t_260104_0428.md  t_260104_0434.md  t_260104_0444.md  t_260104_0447.md  t_260104_0451.md  t_260104_0453.md  t_260104_0456.md  t_260104_0500.md  t_260104_0502.md  t_260104_0508.md  t_260104_0515.md  t_260104_0521.md  t_260104_0530.md  t_260104_0547.md  t_260104_0548.md  t_260104_0550.md  t_260104_0556.md  t_260104_0605.md  t_260104_0613.md  t_260104_0614.md  t_260104_0617.md  t_260104_0624.md  (+61 more)
backend.backup.20250108/tests/backend/: conftest.py  test_admin_api.py  test_audio_api.py  test_auth_api.py  test_notebooklm_api.py  test_users_api.py
tests/: run.sh  (+9 more)
(+737 files in other folders)
