[project]
name = "whisper-summarizer-backend"
version = "1.0.0"
description = "Backend API for Whisper Summarizer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "supabase>=2.7.0",
    "python-multipart>=0.0.17",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.1",
    "httpx>=0.28.0",
    "python-pptx>=1.0.0",
    "APScheduler>=3.10.0",
    "faster-whisper>=1.0.0",
    "pydub>=0.25.0",
    "pypandoc>=1.13",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
# Same as Black
line-length = 100
indent-width = 4

# Target Python 3.12
target-version = "py312"

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), and isort (I)
select = ["E", "F", "I", "N", "W", "UP"]
# Ignore specific rules
ignore = [
    "E501",  # Line too long (handled by formatter)
    "W191",  # Tab indentation
]

# Allow autofix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings
quote-style = "double"

# Like Black, indent with spaces, rather than tabs
indent-style = "space"

# Like Black, respect magic trailing commas
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = "."
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
